feat(auth): finish jwt test
